виправлено баг зі звязками, додані графічні елементи і функції видалення і встановлення тексту блоку